src/xwayland/clipboard.cpp
@@ -141,6 +141,11 @@ void Clipboard::doHandleXfixesNotify(xcb_xfixes_selection_notify_event_t *event)
     }
 }
 
+void Clipboard::x11OfferLost()
+{
+    m_selectionSource.reset();
+}
+
 void Clipboard::x11OffersChanged(const QStringList &added, const QStringList &removed)
 {
     m_waitingForTargets = false;
