src/xwayland/clipboard.h
@@ -36,6 +36,7 @@ public:
 
 private:
     void doHandleXfixesNotify(xcb_xfixes_selection_notify_event_t *event) override;
+    void x11OfferLost() override;
     void x11OffersChanged(const QStringList &added, const QStringList &removed) override;
     /**
      * React to Wl selection change.
