src/xwayland/dnd.h
@@ -45,6 +45,7 @@ public:
     XwlDropHandler *dropHandler() const;
 
     void doHandleXfixesNotify(xcb_xfixes_selection_notify_event_t *event) override;
+    void x11OfferLost() override;
     void x11OffersChanged(const QStringList &added, const QStringList &removed) override;
     bool handleClientMessage(xcb_client_message_event_t *event) override;
 
