src/xwayland/selection.h
@@ -74,6 +74,7 @@ protected:
     void registerXfixes();
 
     virtual void doHandleXfixesNotify(xcb_xfixes_selection_notify_event_t *event) = 0;
+    virtual void x11OfferLost() = 0;
     virtual void x11OffersChanged(const QStringList &added, const QStringList &removed) = 0;
 
     virtual bool handleClientMessage(xcb_client_message_event_t *event)
